style.css
/* -------  General Styles ------- */

body {
  font-family: "Lato", sans-serif;
  width: 100%;
}

h2 {
  font-size: 26px;
  font-weight: 400;
  margin: 0 10px 10px 10px;
  text-align: center;
}

h3 {
  font-size: 18px;
  font-weight: 500;
  padding-top: 1%;
  max-width: 50%;
}

p {
  line-height: 1.5em;
  margin: 0;
}

section {
  padding: 20px 20px 20px 20px;
  width: 100%;
}

.line1, .line2 {
  display: flex;
  flex-direction: column;
  padding: 0%;
  width: 99vw;
}

section.alternate-background {
  background-color: #00a699;
  color: #fff;
  width: 100%;
}

img {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  width: 100%;
  flex-grow: 1;
  padding: 1% 2% 4% 0%
}



/* ---  Groups & Items --- */

.group {
  display: flex;
  flex-direction: column;
}

.item {
  flex: 1;
  margin: 10px;
}

.item-double {
  flex: 2;
}

/* -------  Navigation ------- */

header {
  background-color: #ff385c;
  display: flex;
  flex-direction: column;
  padding: 10px 20px 0 20px;
  text-align: center;
  justify-content: center;
  width: 100%
}

.logo {
  display: flex;
  font-family: "Pangolin", cursive;
  font-size: 72px;
  color: #fff;
  flex-direction: column;
}

header div, header nav {
  padding-bottom: 1%;
}

header nav ul li {
  list-style-type: none;
  display: flex;
  justify-content: space-around;
  gap: 20px;

}

header nav ul {
  display: flex;
  justify-content: center;
}

header nav ul li a {
  color: #fff;
  text-decoration: none;
  padding: 0 20px 0 0;
}

header nav ul li a:hover {
  color: #bdbdbd;
  text-decoration: none;
}

/* -------  Search Form ------- */
form {
  display: flex;
  border: 2px solid #ff385c;
  flex-direction: column;
  justify-content: space-around;
  align-self: center;
  padding-top: 2%;
}

form label {
  font-weight: bold;
}

form select,
form input {
  margin-bottom: 20px;
  width: 180px;
}

form button {
  background-color: #ff385c;
  border: none;
  color: #fff;
  font-size: 24px;
  padding: 4%;
  margin: 3%;
}

form div {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 3% 3% 0% 3%;
}

/* -------  Footer ------- */

footer {
  background-color: #ff385c;
  display: flex;
  flex-direction: column;
  padding: 0px 20px 0 20px;
  text-align: center;
  width: 100%
}


footer p {
  color: #fff;
  text-align: center;
  padding: 20px;
}

/* -------  Media Query ------- */

@media all and (min-width: 480px) {
  body {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    width: 100%
  }

  .logo {
    display: flex;
    font-family: "Pangolin", cursive;
    font-size: 40px;
    color: #fff;
    flex-direction: column;
  }

  header {
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    align-items: center;
  }

  header nav, header div {
    display: flex;
    flex-direction: row;
    align-items: center;
  }

  header nav ul li {
    list-style-type: none;
    display: flex;
    justify-content: space-around;
    gap: 20px;
  
  }
  
  header nav ul {
    display: flex;
    justify-content: center;
  }
  
  header nav ul li a {
    color: #fff;
    text-decoration: none;
  }
  
  header nav ul li a:hover {
    color: #bdbdbd;
    text-decoration: none;
  }

  .stay {
    max-width: 99%;
  }
  
  form {
    display: flex;
    border: 2px solid #ff385c;
    padding: 0%;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    flex-grow: 1;
  }
  
  form label {
    font-weight: bold;
  }
  
  form select,
  form input {
    display: flex;
    flex-direction: column;
    align-self: flex-start;
    width: 80%;

  }
  
  #type {
    width: 100%;
  }

  form button {
    background-color: #ff385c;
    border: none;
    color: #fff;
    font-size: 100%;
    padding: 1% 4% 1% 4%;
    margin: 1%;
  }
  
  form div {
    display: flex;
    flex-direction: column;
    justify-content: left;
    align-items: stretch;
    padding: 0%;
    margin: 1% 1% -1% 1%;
  }

  .woahNow {
    max-width: 20%;
  }

  label {
    display: flex;
    align-self: flex-start;
  }

  #depart, #arrive {
    display: flex;
    flex-direction: row;
    justify-content: left;
    align-self: flex-start;
    width: 80%;
  }

  /* body { max-width: 100v; } */

  #about div{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    flex: 1;
    display: flex;
    flex: 1;
  }

  #about img {
    width: 25%;
    padding: 1%
  }

  #about p {
    padding: 1%
  }

  #ideas {
    display:flex;
    flex-direction: column;
    justify-content: left;
    align-content: flex-start;
    margin-left: 0%;
  }

  h3 {
    font-size: 18px;
    font-weight: 500;
    padding-top: 1%;
    max-width: 50%;
  }

  .ideas2 {
    display: flex;
    flex-direction: row;
  }

  #ideas .line1 div {
    display: flex;
    flex-direction: column;
    justify-content: left;
  }

  #ideas img {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    margin-left: 0%;
    margin-right: 0%;
    padding: 0%;
    /* flex: 1 1 100%; */
    max-width: 90%;
    max-height: 100%;
    gap: 1;
  }

  .line1, .line2{
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    padding: 0%;
    flex-wrap: wrap;
    /* margin-left: -5%;
    margin-right: -5%; */
  }

  .line2 {
    /* padding-bottom: 6%; */
    margin-right: -6%;
  }

  #host {
    display: flex;
    flex-direction: row;

  }

  #host img {
    width: 50%;
    height: 50%;
    padding: 1%
  }

  #host div {
    align-self: center;
  }
}

 @media all and (max-width: 329px) {
  .logo {
    font-size: 200%;
  }
}
/*
  header {
    width: 99%;
  }

  form div {
    display: flex;
    flex-direction: column;
  }

  form select,
  form input {
    margin-bottom: 10%;
    width: 100%;
  }
 }

 @media all and (max-width: 525px) {
  form button {
    background-color: #ff385c;
    border: none;
    color: #fff;
    font-size: 10%;
    padding: 2% 2% 2% 2%;
    margin: 1%;
  }
} */
html {
  max-width: 99vw;
}

.tooWide {
  max-width: 50%;
}

